--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Wings Media</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Playfair Display', serif;
+      background: #f9f9f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #000;
+      color: #fff;
+      padding: 2rem 1rem;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    main {
+      padding: 2rem;
+    }
+    footer {
+      background: #111;
+      color: #ccc;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Wings Media</h1>
-  <p>We believe in freedom, ideas, and people-first innovation.</p>
+
+  <header>
+    <h1>Wings Media</h1>
+    <p>A Revolution in Thought. A Movement in Ink.</p>
+  </header>
+
+  <main>
+    <h2>Launching Soon</h2>
+    <p>We’re building a platform for voices that matter. Ideas that spark. And freedom that speaks.</p>
+    <p>Follow us on <a href="https://www.linkedin.com/in/akhilesh-v-s-564546236" target="_blank">LinkedIn</a> for the latest.</p>
+  </main>
+
+  <footer>
+    © 2025 Wings Media | Built with heart and purpose.
+  </footer>
+
 </body>
 </html>
