--- a/index.html
+++ b/index.html
@@ -14,32 +14,87 @@
       padding: 0;
       text-align: center;
     }
+
     header {
       background-color: #000;
       color: #fff;
-      padding: 2rem 1rem;
+      padding: 1rem;
     }
-    h1 {
-      margin: 0;
-      font-size: 2.5rem;
+
+    nav {
+      background-color: #111;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      padding: 1rem 0;
+      flex-wrap: wrap;
     }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border: 2px solid #fff;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      transition: 0.3s ease;
+    }
+
+    nav a:hover {
+      background-color: #fff;
+      color: #000;
+    }
+
+    .logo {
+      max-width: 120px;
+      margin: 0 auto 1rem;
+      display: block;
+    }
+
     main {
       padding: 2rem;
     }
+
+    h1 {
+      margin: 0.5rem 0 0.2rem;
+      font-size: 2.5rem;
+    }
+
+    .subtitle {
+      font-size: 1.1rem;
+      font-style: italic;
+      color: #ccc;
+      margin-bottom: 2rem;
+    }
+
     footer {
       background: #111;
       color: #ccc;
       padding: 1rem;
       font-size: 0.9rem;
     }
+
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
 
   <header>
+    <img src="logo.jpg" alt="Wings Media Logo" class="logo">
     <h1>Wings Media</h1>
-    <p>A Revolution in Thought. A Movement in Ink.</p>
+    <p class="subtitle">A Revolution in Thought. A Movement in Ink.</p>
   </header>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Articles</a>
+    <a href="#">Join Us</a>
+    <a href="#">Contact</a>
+  </nav>
 
   <main>
     <h2>Launching Soon</h2>
