--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
   </header>
 
   <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Articles</a>
-    <a href="#">Join Us</a>
-    <a href="#">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="articles.html">Articles</a>
+    <a href="podcasts.html">Listen to Our Podcasts</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
   <main>
