--- a/about.html
+++ b/about.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>About Us | Wings Media</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <header>
+    <img src="logo.jpg" alt="Wings Media Logo" class="logo" />
+    <h1>Wings Media</h1>
+    <p class="subtitle">A Revolution in Thought. A Movement in Ink.</p>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="articles.html">Articles</a>
+    <a href="podcasts.html">Listen to Our Podcasts</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <main>
+    <h2>About Us</h2>
+    <p>Wings Media is a movement dedicated to empowering voices, provoking thought, and encouraging freedom of expression. We believe that words can ignite change—and our platform exists to nurture and amplify that spark.</p>
+    <p>Founded in 2025, we are an independent media initiative led by creators, thinkers, and truth seekers.</p>
+  </main>
+
+  <footer>
+    © 2025 Wings Media | Built with heart and purpose.
+  </footer>
+
+</body>
+</html>
