--- a/articles.html
+++ b/articles.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Articles | Wings Media</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <header>
+    <img src="logo.jpg" alt="Wings Media Logo" class="logo" />
+    <h1>Wings Media</h1>
+    <p class="subtitle">A Revolution in Thought. A Movement in Ink.</p>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="articles.html">Articles</a>
+    <a href="podcasts.html">Listen to Our Podcasts</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <main>
+    <h2>Articles</h2>
+    <p>Coming soon: Original writing, opinion pieces, and essays that challenge norms and fuel dialogue.</p>
+  </main>
+
+  <footer>
+    © 2025 Wings Media | Built with heart and purpose.
+  </footer>
+
+</body>
+</html>
