--- a/podcasts.html
+++ b/podcasts.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Podcasts | Wings Media</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <header>
+    <img src="logo.jpg" alt="Wings Media Logo" class="logo" />
+    <h1>Wings Media</h1>
+    <p class="subtitle">A Revolution in Thought. A Movement in Ink.</p>
+  </header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="articles.html">Articles</a>
+    <a href="podcasts.html">Listen to Our Podcasts</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <main>
+    <h2>Our Podcasts</h2>
+    <p>Tune in to powerful conversations and thought-provoking discussions on creativity, society, freedom, and more.</p>
+    
+    <!-- Spotify embedded player example -->
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/5pGzFXMk0r7CnUoTqQwLhZ?utm_source=generator" width="100%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" loading="lazy"></iframe>
+    
+    <p>More episodes coming soon!</p>
+  </main>
+
+  <footer>
+    © 2025 Wings Media | Built with heart and purpose.
+  </footer>
+
+</body>
+</html>
