--- a/contact.html
+++ b/contact.html
@@ -2,35 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact Us | Wings Media</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
+  <title>Contact | Wings Media</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
-    <img src="logo.jpg" alt="Wings Media Logo" class="logo" />
+    <img src="assets/logo.png" alt="Wings Media Logo" />
     <h1>Wings Media</h1>
-    <p class="subtitle">A Revolution in Thought. A Movement in Ink.</p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="podcasts.html">Listen to Our Podcasts</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="articles.html">Articles</a>
-    <a href="podcasts.html">Listen to Our Podcasts</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
-  <main>
+  <div class="container">
     <h2>Contact Us</h2>
     <p>Email us at: <a href="mailto:wingsmedia@example.com">wingsmedia@example.com</a></p>
-    <p>Follow us on <a href="https://www.linkedin.com/in/akhilesh-v-s-564546236" target="_blank">LinkedIn</a> for updates and news.</p>
-  </main>
+    <p>Follow us on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a> for updates and news.</p>
+  </div>
 
   <footer>
-    © 2025 Wings Media | Built with heart and purpose.
+    &copy; 2025 Wings Media | Built with heart and purpose.
   </footer>
-
 </body>
 </html>
