--- a/about.html
+++ b/about.html
@@ -2,31 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About | Wings Media</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About | WingsMedia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Wings Media Logo" />
-    <h1>Wings Media</h1>
+    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="articles.html">Articles</a>
-      <a href="podcasts.html">Listen to Our Podcasts</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <div class="container">
-    <h2>About Us</h2>
-    <p><strong>Wings Media</strong> was born out of a desire to amplify voices that spark thought and fuel change.</p>
-    <p>Our mission is to become a sanctuary for original thinkers, writers, and storytellers who aren't afraid to speak their truth.</p>
-    <p>We believe in the freedom of press, the beauty of prose, and the power of purpose-driven storytelling.</p>
-  </div>
+  <main>
+    <section class="hero">
+      <h1>Who We Are</h1>
+      <p>WingsMedia is a youth-driven platform dedicated to freedom of expression, democracy, and creative voices. Our mission is to amplify stories that matter and make a difference.</p>
+    </section>
+  </main>
 
   <footer>
-    &copy; 2025 Wings Media | Built with heart and purpose.
+    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
