--- a/articles.html
+++ b/articles.html
@@ -2,29 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Articles | Wings Media</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Articles | WingsMedia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Wings Media Logo" />
-    <h1>Wings Media</h1>
+    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="articles.html">Articles</a>
-      <a href="podcasts.html">Listen to Our Podcasts</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="articles.html" class="active">Articles</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <div class="container">
-    <h2>Articles</h2>
-    <p>We're working on a powerful collection of perspectives. Stay tuned!</p>
-  </div>
+  <main>
+    <section class="hero">
+      <h1>Articles & Blogs</h1>
+      <p>Explore thought-provoking articles written by young voices, activists, creators, and storytellers. We believe in writing that inspires and informs.</p>
+      <p><i>(Articles coming soon. Stay tuned!)</i></p>
+    </section>
+  </main>
 
   <footer>
-    &copy; 2025 Wings Media | Built with heart and purpose.
+    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
