--- a/podcasts.html
+++ b/podcasts.html
@@ -2,30 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Podcasts | Wings Media</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Podcasts | WingsMedia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Wings Media Logo" />
-    <h1>Wings Media</h1>
+    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="articles.html">Articles</a>
-      <a href="podcasts.html">Listen to Our Podcasts</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="podcasts.html" class="active">Podcasts</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <div class="container">
-    <h2>Listen to Our Podcasts</h2>
-    <p>Our podcast is launching soon. From interviews with changemakers to deep-dive discussions—Wings Media podcasts will ignite your mind.</p>
-    <p>Follow us on Spotify or Apple Podcasts to stay updated!</p>
-  </div>
+  <main>
+    <section class="hero">
+      <h1>🎧 Our Podcasts</h1>
+      <p>Tune into our latest conversations, interviews, and audio essays. Voices that resonate with truth, freedom, and new ideas.</p>
+      <p><i>(Embed Spotify, YouTube, or upload files here later!)</i></p>
+    </section>
+  </main>
 
   <footer>
-    &copy; 2025 Wings Media | Built with heart and purpose.
+    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
