--- a/contact.html
+++ b/contact.html
@@ -2,30 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact | Wings Media</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact | WingsMedia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Wings Media Logo" />
-    <h1>Wings Media</h1>
+    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="articles.html">Articles</a>
-      <a href="podcasts.html">Listen to Our Podcasts</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <div class="container">
-    <h2>Contact Us</h2>
-    <p>Email us at: <a href="mailto:wingsmedia@example.com">wingsmedia@example.com</a></p>
-    <p>Follow us on <a href="https://www.linkedin.com" target="_blank">LinkedIn</a> for updates and news.</p>
-  </div>
+  <main>
+    <section class="hero">
+      <h1>📬 Get In Touch</h1>
+      <p>Have a story to share? Want to collaborate? Reach out to us!</p>
+      <p>Email: <a href="mailto:wingsmedia@example.com">wingsmedia@example.com</a></p>
+      <p>Instagram: <a href="https://instagram.com/wingsmedia">@wingsmedia</a></p>
+    </section>
+  </main>
 
   <footer>
-    &copy; 2025 Wings Media | Built with heart and purpose.
+    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
