--- a/index.html
+++ b/index.html
@@ -2,35 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WingsMedia</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WingsMedia - Home</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
+    <div class="logo">WingsMedia</div>
     <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="articles.html">Articles</a></li>
-        <li><a href="podcasts.html">Podcasts</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="podcasts.html">Podcasts</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
     <section class="hero">
       <h1>Welcome to WingsMedia</h1>
-      <p>Unfolding voices, igniting change.</p>
+      <p>Empowering thoughts, Redefining Perspectives.</p>
       <a href="podcasts.html" class="btn">🎧 Listen to Our Podcasts</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
+    <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
