--- a/about.html
+++ b/about.html
@@ -3,32 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About | WingsMedia</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>About - WingsMedia</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
+    <div class="logo">WingsMedia</div>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" class="active">About</a></li>
-        <li><a href="articles.html">Articles</a></li>
-        <li><a href="podcasts.html">Podcasts</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="podcasts.html">Podcasts</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
-    <section class="hero">
-      <h1>Who We Are</h1>
-      <p>WingsMedia is a youth-driven platform dedicated to freedom of expression, democracy, and creative voices. Our mission is to amplify stories that matter and make a difference.</p>
-    </section>
+    <h1>Meet the Team</h1>
+    <div class="team">
+      <div><strong>Purushothaman</strong><p>Leads the editorial team and content strategy.</p></div>
+      <div><strong>Dinesh</strong><p>Podcast host & tech writer with sharp opinions.</p></div>
+      <div><strong>Akhilesh</strong><p>Founder. Believes in disrupting the system with ideas.</p></div>
+      <div><strong>Gowtham</strong><p>Researcher & story curator behind bold content.</p></div>
+      <div><strong>Navaneet</strong><p>Creative visuals & artwork driving WingsMedia’s face.</p></div>
+    </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
+    <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
