--- a/articles.html
+++ b/articles.html
@@ -3,33 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Articles | WingsMedia</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Articles - WingsMedia</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
+    <div class="logo">WingsMedia</div>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="articles.html" class="active">Articles</a></li>
-        <li><a href="podcasts.html">Podcasts</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="podcasts.html">Podcasts</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
-    <section class="hero">
-      <h1>Articles & Blogs</h1>
-      <p>Explore thought-provoking articles written by young voices, activists, creators, and storytellers. We believe in writing that inspires and informs.</p>
-      <p><i>(Articles coming soon. Stay tuned!)</i></p>
-    </section>
+    <h1>Published Articles</h1>
+    <ul>
+      <li><a href="https://www.linkedin.com/posts/akhilesh-v-s">The System is Stuck, We’re Not</a> - on LinkedIn</li>
+      <li><a href="https://akhileshvs.substack.com">What We Dream For</a> - on Substack</li>
+      <li><a href="https://medium.com/@akhileshvs">Resistance with Words</a> - on Medium</li>
+    </ul>
   </main>
 
   <footer>
-    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
+    <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
