--- a/podcasts.html
+++ b/podcasts.html
@@ -3,33 +3,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Podcasts | WingsMedia</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Podcasts - WingsMedia</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
+    <div class="logo">WingsMedia</div>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="articles.html">Articles</a></li>
-        <li><a href="podcasts.html" class="active">Podcasts</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="podcasts.html">Podcasts</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
-    <section class="hero">
-      <h1>🎧 Our Podcasts</h1>
-      <p>Tune into our latest conversations, interviews, and audio essays. Voices that resonate with truth, freedom, and new ideas.</p>
-      <p><i>(Embed Spotify, YouTube, or upload files here later!)</i></p>
-    </section>
+    <h1>Our Podcasts</h1>
+    <p>Listen to student voices breaking boundaries.</p>
+    <ul>
+      <li><a href="#">🎧 "Break the Silence" – Hosted by Dinesh</a></li>
+      <li><a href="#">🎧 "The Mepco Manifesto" – Hosted by Akhilesh</a></li>
+    </ul>
   </main>
 
   <footer>
-    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
+    <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
