--- a/contact.html
+++ b/contact.html
@@ -3,34 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact | WingsMedia</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Contact - WingsMedia</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="WingsMedia Logo" class="logo" />
+    <div class="logo">WingsMedia</div>
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="articles.html">Articles</a></li>
-        <li><a href="podcasts.html">Podcasts</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
-      </ul>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="articles.html">Articles</a>
+      <a href="podcasts.html">Podcasts</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
-    <section class="hero">
-      <h1>📬 Get In Touch</h1>
-      <p>Have a story to share? Want to collaborate? Reach out to us!</p>
-      <p>Email: <a href="mailto:wingsmedia@example.com">wingsmedia@example.com</a></p>
-      <p>Instagram: <a href="https://instagram.com/wingsmedia">@wingsmedia</a></p>
-    </section>
+    <h1>Contact Us</h1>
+    <p>Reach out with questions, suggestions, or support:</p>
+    <ul>
+      <li>Email: contact@wingsmedia.online</li>
+      <li>Instagram: @wingsmedia.online</li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/akhilesh-v-s-564546236/">Akhilesh V S</a></li>
+    </ul>
   </main>
 
   <footer>
-    <p>&copy; 2025 WingsMedia. All rights reserved.</p>
+    <p>© 2025 WingsMedia. All rights reserved.</p>
   </footer>
 </body>
 </html>
