--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>WingsMedia - Home</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
-    <div class="logo">WingsMedia</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="articles.html">Articles</a>
-      <a href="podcasts.html">Podcasts</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="nav-container">
+      <div class="logo">WingsMedia</div>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="articles.html">Articles</a>
+        <a href="podcasts.html">Podcasts</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <section class="hero">
-      <h1>Welcome to WingsMedia</h1>
-      <p>Empowering thoughts, Redefining Perspectives.</p>
-      <a href="podcasts.html" class="btn">🎧 Listen to Our Podcasts</a>
-    </section>
+  <main class="hero">
+    <h1>Welcome to WingsMedia</h1>
+    <p>Empowering Thoughts, Redefining Perspectives.</p>
+    <a class="cta" href="podcasts.html">🎙 Listen to Our Podcasts</a>
   </main>
 
   <footer>
