--- a/about.html
+++ b/about.html
@@ -4,33 +4,55 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About - WingsMedia</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <div class="logo">WingsMedia</div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="articles.html">Articles</a>
-      <a href="podcasts.html">Podcasts</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="container">
+      <div class="logo">WingsMedia</div>
+      <nav class="nav">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="articles.html" class="nav-link">Articles</a>
+        <a href="podcasts.html" class="nav-link">Podcasts</a>
+        <a href="contact.html" class="nav-link">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <main>
+  <main class="page-content fade-in">
     <h1>Meet the Team</h1>
-    <div class="team">
-      <div><strong>Purushothaman</strong><p>Leads the editorial team and content strategy.</p></div>
-      <div><strong>Dinesh</strong><p>Podcast host & tech writer with sharp opinions.</p></div>
-      <div><strong>Akhilesh</strong><p>Founder. Believes in disrupting the system with ideas.</p></div>
-      <div><strong>Gowtham</strong><p>Researcher & story curator behind bold content.</p></div>
-      <div><strong>Navaneet</strong><p>Creative visuals & artwork driving WingsMedia’s face.</p></div>
+
+    <div class="team-member">
+      <h2>Akhilesh V S</h2>
+      <p>Founder of WingsMedia, passionate about changing perspectives in society through unique insights in economics, social justice, and youth-driven thought leadership.</p>
+    </div>
+
+    <div class="team-member">
+      <h2>Purushothaman</h2>
+      <p>Host of history and philosophy podcasts, making ancient wisdom relevant to modern life with compelling narration and depth.</p>
+    </div>
+
+    <div class="team-member">
+      <h2>Dinesh</h2>
+      <p>Explores science, logic, and rationality. Brings facts to light with engaging arguments and explanations for curious minds.</p>
+    </div>
+
+    <div class="team-member">
+      <h2>Gowtham</h2>
+      <p>Covers the latest in technology, AI, and innovation trends, helping audiences make sense of the future through digestible stories.</p>
+    </div>
+
+    <div class="team-member">
+      <h2>Navaneet</h2>
+      <p>Shares views on sports, cinema, and entertainment. Combines fandom and critique with wit and insight.</p>
     </div>
   </main>
 
   <footer>
-    <p>© 2025 WingsMedia. All rights reserved.</p>
+    <div class="footer-content">
+      <p>&copy; 2025 WingsMedia. All rights reserved.</p>
+    </div>
   </footer>
 </body>
 </html>
