--- a/about.html
+++ b/about.html
@@ -56,3 +56,36 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>WingsMedia - [PAGE NAME]</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body class="fade-in">
+
+  <header>
+    <div class="container">
+      <div class="logo">WingsMedia</div>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="articles.html">Articles</a>
+        <a href="podcasts.html">Podcasts</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="page-content">
+    <!-- Unique page content goes here -->
+  </main>
+
+  <footer>
+    <p>© 2025 WingsMedia. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
