--- a/about.html
+++ b/about.html
@@ -6,6 +6,19 @@
   <title>About - WingsMedia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  <script>
+  const reveals = document.querySelectorAll('.reveal');
+  window.addEventListener('scroll', () => {
+    reveals.forEach(el => {
+      const windowHeight = window.innerHeight;
+      const revealTop = el.getBoundingClientRect().top;
+      const revealPoint = 100;
+      if (revealTop < windowHeight - revealPoint) {
+        el.classList.add('visible');
+      }
+    });
+  });
+</script>
 <body>
   <header>
     <div class="container">
